# nid

./: .gitignore  pyproject.toml  setup.py
nid/: __init__.py  pyrightconfig.json  visualization.py
nid/ast/: annotator_utils.py  string_tools.py
nid/ast/deprecated/: ast_tools.py  python_ast3_cf.py  python_ast_cf.py  python_examples.py  python_graph_subwords.py  python_tokens_to_bpe_subwords.py
nid/ast/graph_builder/: __init__.py
nid/ast/graph_builder/common/: dataframe.py  definitions.py  graph.py  identifiers.py  inspection.py  parser.py  utils.py
nid/ast/graph_builder/v1/: definitions.py  graph.py  node_resolver.py  parser.py  primitives.py
nid/ast/graph_builder/v2/: definitions.py  inspection.py  parser.py  primitives.py
nid/ast/graph_builder/v3/: dataframe.py  definitions.py  inspection.py  parser.py  primitives.py
nid/scripts/: visualize_examples.py
nid/validation/: __init__.py
