[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nid"
authors = [{ name = "Vitaly R" }]
description = "Library for transforming source code into graph representation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[tool.setuptools]
license-files = ["LICENSE"]
packages = ["nid"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}

[project.urls]
"Homepage" = "https://github.com/VitalyRomanov/nid"
"Bug Tracker" = "https://github.com/VitalyRomanov/nid/issues"